--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .icons {
+    @apply hidden xl:inline-flex p-2 h-10 w-10 bg-gray-100 rounded-full text-gray-700 cursor-pointer hover:bg-gray-300;
+  }
+}
