--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,7 @@
   .icons {
     @apply hidden xl:inline-flex p-2 h-10 w-10 bg-gray-100 rounded-full text-gray-700 cursor-pointer hover:bg-gray-300;
   }
+  .inputIcon {
+    @apply flex items-center rounded-xl cursor-pointer space-x-1 hover:bg-gray-100 flex-grow justify-center p-2;
+  }
 }
